# one-piece-rag

./: .gitignore  README.md  eda.ipynb  pyproject.toml  toy_rag.py
chromadb_data/: chroma.sqlite3
chromadb_data/36f89c9b-a67f-4f5c-b9c6-d669082cad87/: index_metadata.pickle
data/: corpus.pkl
data/dialogue/: 384.txt  385.txt  387.txt  388.txt  389.txt  390.txt  391.txt  392.txt  394.txt  395.txt  396.txt  397.txt  398.txt  399.txt  400.txt  401.txt  402.txt  403.txt  404.txt  405.txt  407.txt  408.txt  409.txt  410.txt  411.txt  413.txt  414.txt  415.txt  416.txt  417.txt  418.txt  419.txt  420.txt  421.txt  422.txt  423.txt  424.txt  425.txt  426.txt  427.txt  (+348 more)
my_chromadb_data/: chroma.sqlite3
my_chromadb_data/36f89c9b-a67f-4f5c-b9c6-d669082cad87/: index_metadata.pickle
src/: app.py  bm25_ranker.py  chroma_db.py  corpus_pickle.py  emb_model.py  index.py  query.py  reranker.py  terminal_app.py  terminal_query.py
src/services/: chroma_db.py  query.py
src/services/ranker/: bm25_ranker.py
src/setup_scripts/: csv2dialogue.py  index.py
src/utils/: get_groq_models.py
