[project]
name = "rag-from-zero-to-hero"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.9",
    "faiss-cpu>=1.14.2",
    "groq>=1.2.0",
    "langchain>=1.3.1",
    "langchain-text-splitters>=1.1.2",
    "openai>=2.38.0",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.5.1",
]
